--- a/KuranX.App/Core/Pages/TestFrame.xaml
+++ b/KuranX.App/Core/Pages/TestFrame.xaml
@@ -10,49 +10,92 @@
 
     <Grid>
 
-        <Label>Test Page</Label>
-        <Popup x:Name="wordDetailPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
-            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
+        <Label>------------- TEST PAGE -------------</Label>
+
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+            <Border Style="{DynamicResource versesTab}">
                 <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="530" />
-                    </Grid.RowDefinitions>
-                    <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
-                        <TextBlock Text="Kelime Kökleri" Style="{DynamicResource popupHeaderText}" />
-                    </Border>
-                    <Grid Grid.Row="1">
-                        <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="56" />
-                            </Grid.RowDefinitions>
-
-                            <ScrollViewer Grid.ColumnSpan="2" Grid.Row="0" Padding="20">
-                                <StackPanel x:Name="meainingAllShowPopupStackPanel">
-                                    <StackPanel Orientation="Horizontal">
-                                        <StackPanel Margin="10 0 10 0">
-                                            <TextBlock  Style="{DynamicResource wordHeader}" Text="KÖK" />
-                                            <Separator Style="{DynamicResource dynamicItemShowSperator}" Width="200" />
-                                        </StackPanel>
-                                        <StackPanel Margin="10 0 10 0">
-                                            <TextBlock Style="{DynamicResource wordHeader}" Text="ANLAMI" />
-                                            <Separator Style="{DynamicResource dynamicItemShowSperator}" Width="200" />
+                    <ItemsControl Grid.Column="0" VerticalAlignment="Center" x:Name="verseHeader">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="15,0,0,0" Grid.Column="0">
+                                        <TextBlock Text="{Binding Name}" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#1C1E2F" FontSize="26" />
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding LandingLocation}" Style="{DynamicResource versesTabAlt}" />
+                                            <TextBlock Text="{Binding NumberOfVerses}" Style="{DynamicResource versesTabAlt}" />
+                                            <TextBlock Text="Ayet" Style="{DynamicResource versesTabAlt}" />
                                         </StackPanel>
                                     </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Margin="0 10 0 10">
-                                        <TextBlock Style="{DynamicResource wordDetail}" Text="bi ismi allahi" />
-                                        <TextBlock Style="{DynamicResource wordDetail}" Text="Allah'ın ismi ile" />
+                                    <StackPanel Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <StackPanel Grid.Column="0" Orientation="Vertical" Margin="0,0,20,0">
+                                                <Border Padding="15,0,15,0" BorderBrush="#E1E3E6" BorderThickness="0,0,0,1">
+                                                    <TextBlock Text="İNİŞ SIRASI" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#1C1E2F" />
+                                                </Border>
+                                                <TextBlock  Text="{Binding DeskLanding}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
+                                            </StackPanel>
+                                            <StackPanel  Grid.Column="1" Orientation="Vertical">
+                                                <Border Padding="15,0,15,0" BorderBrush="#E1E3E6" BorderThickness="0,0,0,1">
+                                                    <TextBlock Text="MUSHAF SIRASI" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#1C1E2F" />
+                                                </Border>
+                                                <TextBlock Text="{Binding DeskMushaf}" HorizontalAlignment="Center" VerticalAlignment="Center"  Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
+                                            </StackPanel>
+                                        </Grid>
                                     </StackPanel>
-                                </StackPanel>
-                            </ScrollViewer>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
 
-                            <Button Grid.Column="1" Grid.Row="4" Style="{DynamicResource selectConnectAyet}" Content="Vazgeç" Tag="Close" Uid="wordDetailPopup" Click="popupClosed_Click" />
-                        </Grid>
-                    </Grid>
+                    <ItemsControl Grid.Column="1" VerticalAlignment="Center" Margin="20 0 0 0" x:Name="backVerseLocation">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <StackPanel Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <StackPanel Grid.Column="0" Orientation="Vertical" Margin="0,0,20,0">
+                                                <Border Padding="15,0,15,0" BorderBrush="#E1E3E6" BorderThickness="0,0,0,1">
+                                                    <TextBlock Text="Gelinen Sure" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#1C1E2F" />
+                                                </Border>
+                                                <TextBlock  Text="{Binding DeskLanding}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
+                                            </StackPanel>
+                                            <StackPanel  Grid.Column="1" Orientation="Vertical">
+                                                <Border Padding="15,0,15,0" BorderBrush="#E1E3E6" BorderThickness="0,0,0,1">
+                                                    <TextBlock Text="Gelinen Ayet" FontFamily="{DynamicResource PoppinsMedium}" Foreground="#1C1E2F" />
+                                                </Border>
+                                                <TextBlock Text="{Binding DeskMushaf}" HorizontalAlignment="Center" VerticalAlignment="Center"  Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
+                                            </StackPanel>
+                                        </Grid>
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </Grid>
             </Border>
-        </Popup>
+        </StackPanel>
     </Grid>
 </Page>
