--- a/KuranX.App/Core/ResourceXaml/verseMainPage.xaml
+++ b/KuranX.App/Core/ResourceXaml/verseMainPage.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                    xmlns:Local="clr-namespace:KuranX.App.Core.View_Model">
+                    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <!-- Page row 0 -->
 
@@ -32,7 +31,7 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Margin" Value="20,0,0,0" />
+        <Setter Property="Margin" Value="20,20,0,0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
@@ -51,6 +50,11 @@
                             <Setter Property="Cursor" Value="Hand" />
                             <Setter Property="Foreground" Value="#FFF" TargetName="whereistayText" />
                             <Setter Property="Foreground" Value="#FFF" TargetName="whereistayIcon" />
+                        </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="whereistayBorder" Property="Background" Value="#FFE4E6EF" />
+                            <Setter  TargetName="whereistayBorder" Property="Cursor" Value="No" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -433,38 +437,51 @@
 
         <Setter Property="Width" Value="26" />
         <Setter Property="Height" Value="26" />
-        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="Foreground" Value="#FF1C1E2F" />
         <Setter Property="BorderThickness" Value="0 0 0 0" />
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Bottom" />
-        <Setter Property="Margin" Value="5 0 0 10" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="0 2 0 0" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
 
+                <Setter Property="Foreground" Value="#C9283E" />
+                <Setter Property="Cursor" Value="Hand" />
+                <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="ayetItemsButtonFast" TargetType="Button" BasedOn="{StaticResource ayetItemsButton}">
         <Setter Property="Template">
-
             <Setter.Value>
                 <ControlTemplate>
-                    <Icon:PackIconBootstrapIcons Kind="BoxArrowInRight" x:Name="meltdown" Foreground="#FF1C1E2F" VerticalAlignment="Center" HorizontalAlignment="Center" Width="24" Height="24" />
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="meltdown" Property="Foreground" Value="#C9283E" />
-                            <Setter TargetName="meltdown" Property="Cursor" Value="Hand" />
-                            <Setter Property="Cursor" Value="Hand" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
+                    <TextBlock Width="26" Height="26" TextAlignment="Right" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="0 0 1 0">
+                        <Icon:PackIconBootstrapIcons Kind="BoxArrowInUpRight" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
+                    </TextBlock>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-            </Trigger>
-        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="ayetItemsButtonFull" TargetType="Button" BasedOn="{StaticResource ayetItemsButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <TextBlock Width="26" Height="26" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Icon:PackIconBootstrapIcons Kind="BoxArrowInRight" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Center" Width="24" Height="24" />
+                    </TextBlock>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="versescounttext" TargetType="TextBlock">
 
         <Setter Property="Foreground" Value="#FF7B7B7B" />
-        <Setter Property="FontSize" Value="10" />
+        <Setter Property="FontSize" Value="12" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
         <Setter Property="HorizontalAlignment" Value="Left" />
@@ -473,37 +490,39 @@
     <Style x:Key="versesName" TargetType="TextBlock">
 
         <Setter Property="Foreground" Value="#FF1C1E2F" />
-        <Setter Property="FontSize" Value="24" />
+        <Setter Property="FontSize" Value="20" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
         <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="10,0,0,0" />
-        <Setter Property="Padding" Value="5,5,5,0" />
+        <Setter Property="Margin" Value="10 5 5 0" />
     </Style>
 
     <Style x:Key="versesDesc" TargetType="TextBlock">
-
         <Setter Property="Foreground" Value="#FF7B7B7B" />
-        <Setter Property="FontSize" Value="10" />
+        <Setter Property="FontSize" Value="12" />
         <Setter Property="HorizontalAlignment" Value="Right" />
-        <Setter Property="Margin" Value="0,0,10,0" />
+        <Setter Property="TextAlignment" Value="Right" />
+        <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="Padding" Value="0 0 15 0" />
     </Style>
 
     <Style x:Key="versesLanding" TargetType="TextBlock">
-
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="Foreground" Value="#FFC9283E" />
-        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
-        <Setter Property="Margin" Value="0,0,10,0" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
+        <Setter Property="TextAlignment" Value="Right" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Padding" Value="0 0 15 0" />
     </Style>
 
     <Style x:Key="versesDeskLanding" TargetType="TextBlock">
 
-        <Setter Property="FontSize" Value="36" />
+        <Setter Property="FontSize" Value="38" />
         <Setter Property="Foreground" Value="#FF1C1E2F" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="HorizontalAlignment" Value="Center" />
-        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="VerticalAlignment" Value="Top" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="TextAlignment" Value="Center" />
+
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
     </Style>
 </ResourceDictionary>
